fixed alignment issues

--- a/assignments/lesson-6/css/large-6.css
+++ b/assignments/lesson-6/css/large-6.css
@@ -18,7 +18,7 @@ header h3 {
   margin-top: 8px;
 }
 header figure img {
-  margin: 0 20px;
+  margin: 0 35px;
   width: 100px;
 }
 
@@ -98,7 +98,7 @@ section.contact {
 section.contact div.map {
   width: 50%;
   float: right;
-  margin-top: -140px;
+  margin-top: -150px;
 }
 
 section.contact iframe {
