--- a/assignments/lesson-6/css/medium-6.css
+++ b/assignments/lesson-6/css/medium-6.css
@@ -2,7 +2,7 @@
 
 header figure img {
   width: 75px;
-  margin: 5px 0 0 20px;
+  margin: 0 25px;
 }
 header h1 {
   font-size: 2rem;
