--- a/assignments/lesson-6/css/small-6.css
+++ b/assignments/lesson-6/css/small-6.css
@@ -26,8 +26,11 @@ header {
   width: 100%;
   background-color: #03808f;
   color: #e9e9e9;
-  text-align: center;
+  /* text-align: center; */
   display: block;
+}
+header figure {
+  /* margin-right: 50px; */
 }
 header h1 {
   margin: 0;
@@ -40,7 +43,7 @@ header h3 {
 }
 header figure img {
   float: left;
-  margin: 0 10px;
+  margin: 0 20px;
   width: 50px;
 }
 .wrapper {
